Fix toaster z-index

--- a/src/components/toaster/Toaster.css
+++ b/src/components/toaster/Toaster.css
@@ -1,4 +1,5 @@
 .toaster {
+    z-index: 100;
     display: flex;
     flex-direction: column-reverse;
     gap: 12px;
